Patch 1.0.9
UI & Optimization
- Updated Folder organization within code editor
- Optimized code
   - removing un-needed imports
   - removing unused functions / variables